--- a/src/styles.css
+++ b/src/styles.css
@@ -51,3 +51,12 @@ body{
     justify-content: space-evenly;
     margin-top: 40px;
 }
+
+.descriptionDiv{
+    width: 650px;
+    text-align: center;
+    margin-left: 300px;
+    margin-top: 40px;
+    font-family: "Satisfy", cursive;
+    font-size: 20px;
+}
